MSS-1566 - Fixed alignment issues, adjusted font-sizes for sidebar

--- a/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/search.scss
+++ b/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/search.scss
@@ -33,8 +33,12 @@
         border: rem(1) solid $black2;
         border-radius: rem(4);
         background-color: $white1;
-        line-height: 1.5;
         color: $black;
+        font-size: rem(16);
+        letter-spacing: 0;
+        line-height: rem(24);
+        text-transform: capitalize;
+        padding-left: rem(20);
       }
 
       .secondary-bar {
@@ -43,6 +47,7 @@
         border: rem(1) solid $border-color;
         border-radius: rem(4);
         overflow-y: hidden;
+        margin-bottom: rem(19.5);
 
         .reset {
           box-sizing: border-box;
@@ -51,6 +56,7 @@
           color: $black;
           letter-spacing: 0;
           text-align: center;
+          text-transform: capitalize;
           border: none;
           margin-top: rem(5);
 
@@ -94,10 +100,7 @@
         .result-count {
             font-size: rem(12);
         }
-
     }
-
-
 }
 
 .result-count {
@@ -105,16 +108,12 @@
     font-family: $font-medium;
     font-weight: 500;
     @include media-breakpoint-up(xl) {
-      max-width: rem(775);
-      flex: 0 0 rem(775);
       padding: 0;
     }
 }
 
-.sort-filters-button {
+.sort-col {
   @include media-breakpoint-up(xl) {
-    max-width: rem(315);
-    flex: 0 0 rem(315);
     padding: 0;
   }
 
@@ -150,11 +149,13 @@
 
         .card-header {
           font-family: $font-medium;
-          font-weight:500;
           font-size: rem(16);
+          font-weight: 500;
+          letter-spacing: 0;
+          text-transform: capitalize;
           height: rem(25);
+          padding: rem(0);
           
-
           &::after {
             content: "\f067";
             top: rem(18);
@@ -163,24 +164,44 @@
             outline: none;
           }
 	    }
+
       &.active {
         height: auto;
+        padding-top: rem(16.5);
+        padding-bottom: rem(13.5);
 
-          .card-header {
-             height: rem(25);
-             
-             &::after{
-                 content: "\f068";
-                 top: rem(2);
-             }
-          }
+        .card-header {
+            height: rem(25);
+            padding: rem(0);
+            
+            
+            &::after{
+                content: "\f068";
+                top: rem(16.5);
+            }
+        }
 
-          .card-body {
-            margin-top: rem(20);
+        .card-body {
+          margin-top: rem(20);
+          padding: rem(0);
+
+          .values {
+            padding: rem(0);
+
+            li {
+              .fa-square-o {
+                display: inline-block;
+                vertical-align: middle;
+              }
+
+              span {
+                letter-spacing: 0;
+                text-transform: capitalize;
+              }
+            }
           }
+        }
       }
-
-
     }
 }
 
@@ -229,8 +250,6 @@
     }
 }
 
-
-
 .search-nav {
     .nav-link{
       font-size: rem(18);
@@ -268,13 +287,7 @@
 .refinement-bar {
 
   @include media-breakpoint-up(xl) {
-    max-width: rem(315);
-    flex: 0 0 rem(315);
     padding: 0;
-  }
-
-  .reset-container, .refine-wrapper {
-    margin-top: rem(19.5);
   }
 }
 
